# shinkoku-kun

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release-windows.yml
docs/: memory.md
docs/decisions/: ADR-0001-ledger-rules.md  ADR-0002-github-release-distribution.md  ADR-0003-fixed-cost-yearly-materialization.md
docs/runlogs/: 20260305-0000-runner-red-summary.md  20260305-0002-runner-green-summary.md  20260305-0003-runner-regression-summary.md  20260305-0009-final-regression-summary.md  20260305-122044-8agents-test-doc-only-summary.md  20260305-122127-runner-green-summary.md  20260305-122127-runner-red-summary.md  20260305-122127-runner-regression-summary.md  20260305-122239-8agents-test-doc-maintenance-summary.md  20260305-123000-8agents-test-docs-summary.md  README.md
docs/specs/: 8agents-test-docs-only-20260305.md  mvp-requirements.md  risk-pass1.md  risk-pass2.md
docs/testplan/: mvp-testplan.md
scripts/: tauri-wrapper.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/domain/: ledger.test.ts  ledger.ts
src/domain/__tests__/: ledger.test.ts
src/lib/: api.ts  category.test.ts  category.ts  entrySelection.test.ts  entrySelection.ts  format.ts  validation.test.ts  validation.ts
