[package]
name = "shinkoku-kun"
version = "0.1.2"
description = "Desktop ledger app for Japanese white tax filing"
authors = ["daiki"]
edition = "2021"

[lib]
name = "shinkoku_kun_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
calamine = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
